# libedit-unix-win

./: CMakeLists.txt  README.md
src/: chared.c  chared.h  chartype.c  chartype.h  common.c  el.c  el.h  emacs.c  filecomplete.c  histedit.h  history.c  literal.c  map.c  read.c  readline.c  refresh.c  search.c  sig.c  sig.h  terminal.c  tty.c  tty.h  unvis.c  vi.c  vis.c  wintty.c  wintty.h
src/editline/: readline.h
